syntax = "proto3";
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";

package calendar;

message EventMessage {
    int64 id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp created = 4;
}

message ListRequest {
}

message SearchRequest {
    google.protobuf.Timestamp date = 1;
}
message SearchResponse {
    EventMessage event = 1;
}

message AddRequest {
    EventMessage event = 1;
}

message AddResponse {
    bool success = 1;
}

message UpdateRequest {
    EventMessage event = 1;
}
message UpdateResponse {
    bool success = 1;
}

message DeleteRequest {
    int64 id = 1;
}
message DeleteResponse {
    bool success = 1;
}

service EventService {
    rpc List (ListRequest) returns (stream EventMessage);
    rpc Search (SearchRequest) returns (SearchResponse);
    rpc Add (AddRequest) returns (AddResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}